# Legacy-Fantasy

./: .gitignore  CMakeLists.txt  LegacyFantasy  Platformer.sublime-project  README.md  aseprite.h  build_shaders_debug.bat  build_shaders_release.bat  entity.c  infl.h  json.c  json.h  level  level.c  libraries.c  main.c  main.h  nuklear_defines.h  nuklear_util.c  sprite.c  sprite.h  util.c  variables  variables.c
cJson/: cJSON.c  cJSON.h
code/: aseprite.h  entity.frag  entity.vert  libraries.c  main.c  main.h  shader.frag  shader.fs  shader.vs  tile.frag  tile.vert  triangle.frag  triangle.vert  util.c  vk_util.c
libraries/: infl.h  raddbg_markup.h
libraries/SDL3/include/SDL3/: SDL_revision.h
libraries/SDL3/lib/: SDL3.lib  SDL3_image.lib  SDL3_mixer.lib  SDL3_net.lib  SDL3_rtf.lib  SDL3_shadercross.lib  SDL3_ttf.lib
spall/: LICENSE.txt  spall_native_auto.h
